doc: video pres

--- a/site/docs/intro.mdx
+++ b/site/docs/intro.mdx
@@ -3,10 +3,14 @@ sidebar_position: 1
 slug: /
 ---
 
+import { Video } from "./../src/components/Video";
+
 # Introduction
 
 Http-wizard is a type safe api-client designed to streamline the development of your application.  
 It's fully compliant with HTTP standards and facilitates the easy usage of your API with non ts/js clients.
+
+<Video src="/video.mov" />
 
 ### What it can do:
 
@@ -17,10 +21,13 @@ It's fully compliant with HTTP standards and facilitates the easy usage of your 
 
 ### Why not GraphQL or tRPC ?
 
-Both are excellent choices!  
-<b>Http-wizard</b> allows maintaining a standard HTTP API and to keep tools such as Swagger, etc to document your API.  
-For people who wants a tRPC like DX but still using fastify or Express with full control over route naming, http-wizard is made for you !  
-It combines the best of both worlds, ensuring a smooth, efficient, and productive development process.
+Both are excellent choices!
+
+<b>Http-wizard</b> allows maintaining a standard HTTP API and to keep tools such
+as Swagger, etc to document your API. For people who wants a tRPC like DX but still
+using fastify or Express with full control over route naming, http-wizard is made
+for you ! It combines the best of both worlds, ensuring a smooth, efficient, and
+productive development process.
 
 ### How it works ?
 
