--- a/site/docs/intro.mdx
+++ b/site/docs/intro.mdx
@@ -15,7 +15,7 @@ It's fully compliant with HTTP standards and facilitates the easy usage of your 
 ### What it can do:
 
 - Export a type-safe client API
-- Validate input and output of your routes
+- Validate input and output of your routes with Zod or Typebox
 - Drastically simplify your codebase and ensure validation best practices
 - Allow HTTP standards-compliant route naming and usage, with or without http-wizard as a client.
 
