--- a/site/docs/intro.mdx
+++ b/site/docs/intro.mdx
@@ -7,17 +7,20 @@ import { Video } from "./../src/components/Video";
 
 # Introduction
 
-Http-wizard is a type safe api-client designed to streamline the development of your application.  
-It's fully compliant with HTTP standards and facilitates the easy usage of your API with non ts/js clients.
+#### ✨ Http-wizard weaves TypeScript magic, offering a type-safe API client and ensuring a delightful end-to-end developer experience. ✨
 
-<Video src="/video.mov" />
+It natively supports Fastify interface (literally made for it) and Zod or Typebox for validation
 
 ### What it can do:
 
-- Export a type-safe client API
-- Validate input and output of your routes with Zod or Typebox
-- Drastically simplify your codebase and ensure validation best practices
-- Allow HTTP standards-compliant route naming and usage, with or without http-wizard as a client.
+- 100% type-safe api client with typescript magic (no code generation)
+- Fastify first-class support
+- Zod and Typebox support
+- Delightful end-to-end developer experience (tRPC-like)
+- Http standards / REST compatibility: you are owner of your routes
+- Type inference utils
+
+<Video src="/video.mov" />
 
 ### Why not GraphQL or tRPC ?
 
