--- a/site/docs/intro.mdx
+++ b/site/docs/intro.mdx
@@ -41,7 +41,7 @@ First, let's create a route on the server:
 
 ```typescript title="Route creation with Fastify and Zod"
 // server.ts
-import { createRoute, z } from "http-wizard";
+import { createRoute, z } from "@http-wizard/core";
 
 const User = z.object({
   id: z.string(),
@@ -75,7 +75,7 @@ Now, let's use the Router type on the client:
 
 ```typescript title="Client instanciation with axios"
 // client.ts
-import { createClient, ZodTypeProvider } from "http-wizard";
+import { createClient, ZodTypeProvider } from "@http-wizard/core";
 import axios from "axios";
 
 import type { Router } from "./server";
