--- a/site/docs/intro.mdx
+++ b/site/docs/intro.mdx
@@ -15,7 +15,8 @@ It natively supports Fastify interface (literally made for it) and Zod or Typebo
 
 - 100% type-safe api client with typescript magic (no code generation)
 - Fastify first-class support
-- Zod and Typebox support
+- React-query first-class support
+- Zod and Typebox Type providers
 - Delightful end-to-end developer experience (tRPC-like)
 - Http standards / REST compatibility: you are owner of your routes
 - Type inference utils
