--- a/site/docs/intro.mdx
+++ b/site/docs/intro.mdx
@@ -21,7 +21,7 @@ It natively supports Fastify interface (literally made for it) and Zod or Typebo
 - Http standards / REST compatibility: you are owner of your routes
 - Type inference utils
 
-<Video src="/video.mov" />
+<Video src="/presentation.mov" />
 
 ### Why not GraphQL or tRPC ?
 
