--- a/site/docs/intro.mdx
+++ b/site/docs/intro.mdx
@@ -7,6 +7,16 @@ import { Video } from "./../src/components/Video";
 
 # Introduction
 
+<iframe
+  src="https://ghbtns.com/github-btn.html?user=flodlc&repo=http-wizard&type=star&count=false&size=large"
+  frameborder="0"
+  scrolling="0"
+  width="170"
+  height="30"
+  title="GitHub"
+  style={{ marginBottom: 0 }}
+></iframe>
+
 #### ✨ Http-wizard weaves TypeScript magic, offering a type-safe API client and ensuring a delightful end-to-end developer experience. ✨
 
 It natively supports Fastify interface (literally made for it) and Zod or Typebox for validation
@@ -90,3 +100,13 @@ const users = await apiClient.ref("[GET]/users").query({});
 Easy, right?
 Here's how to integrate it into your project:
 [getting-started](/getting-started)
+
+<iframe
+  src="https://ghbtns.com/github-btn.html?user=flodlc&repo=http-wizard&type=star&count=false&size=large"
+  frameborder="0"
+  scrolling="0"
+  width="170"
+  height="30"
+  title="GitHub"
+  style={{ marginBottom: 0 }}
+></iframe>
