--- a/site/docs/intro.mdx
+++ b/site/docs/intro.mdx
@@ -7,15 +7,20 @@ import { Video } from "./../src/components/Video";
 
 # Introduction
 
-<iframe
-  src="https://ghbtns.com/github-btn.html?user=flodlc&repo=http-wizard&type=star&count=false&size=large"
-  frameborder="0"
-  scrolling="0"
-  width="170"
-  height="30"
-  title="GitHub"
-  style={{ marginBottom: 0 }}
-></iframe>
+<div style={{ display: "flex" }}>
+  <iframe
+    src="https://ghbtns.com/github-btn.html?user=flodlc&repo=http-wizard&type=star&count=false&size=large"
+    frameborder="0"
+    scrolling="0"
+    width="170"
+    height="30"
+    title="GitHub"
+    style={{ marginBottom: 0 }}
+  ></iframe>
+</div>
+<div style={{ marginTop: 2, fontSize: 13 }}>
+  Support http-wizard on github 💪
+</div>
 
 #### ✨ Http-wizard weaves TypeScript magic, offering a type-safe API client and ensuring a delightful end-to-end developer experience. ✨
 
