--- a/site/docs/intro.mdx
+++ b/site/docs/intro.mdx
@@ -38,17 +38,17 @@ It natively supports Fastify interface (literally made for it) and Zod or Typebo
 
 <Video src="/presentation.mov" />
 
-### Why not GraphQL or tRPC ?
+### Why not GraphQL or tRPC?
 
 Both are excellent choices!
 
 <b>Http-wizard</b> allows maintaining a standard HTTP API and to keep tools such
-as Swagger, etc to document your API. For people who wants a tRPC like DX but still
+as Swagger, etc to document your API. For people who wants a tRPC-like DX but still
 using fastify or Express with full control over route naming, http-wizard is made
-for you ! It combines the best of both worlds, ensuring a smooth, efficient, and
+for you! It combines the best of both worlds, ensuring a smooth, efficient, and
 productive development process.
 
-### How it works ?
+### How it works
 
 Currently, http-wizard utilizes Zod or Typebox for validation.
 Here is an example with Zod.
