--- a/site/docs/intro.mdx
+++ b/site/docs/intro.mdx
@@ -3,11 +3,11 @@ sidebar_position: 1
 slug: /
 ---
 
-import { Video } from "./../src/components/Video";
+import { Video } from './../src/components/Video';
 
 # Introduction
 
-<div style={{ display: "flex" }}>
+<div style={{ display: 'flex' }}>
   <iframe
     src="https://ghbtns.com/github-btn.html?user=flodlc&repo=http-wizard&type=star&count=false&size=large"
     frameborder="0"
@@ -45,8 +45,8 @@ Both are excellent choices!
 <b>Http-wizard</b> allows maintaining a standard HTTP API and to keep tools such
 as Swagger, etc to document your API. For people who wants a tRPC-like DX but still
 using fastify or Express with full control over route naming, http-wizard is made
-for you! It combines the best of both worlds, ensuring a smooth, efficient, and
-productive development process.
+for you! It combines the best of both worlds, ensuring a smooth, efficient, and productive
+development process.
 
 ### How it works
 
