--- a/site/docs/intro.mdx
+++ b/site/docs/intro.mdx
@@ -1,6 +1,7 @@
 ---
 sidebar_position: 1
 slug: /
+description: Http-wizard weaves TypeScript magic, offering a type-safe API client and ensuring a delightful end-to-end developer experience.
 ---
 
 import { Video } from './../src/components/Video';
